--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,23 +9,23 @@
         android:id="@+id/recyclerview_movies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="0dp"
-        android:layout_margin="0dp"
+        android:padding="@dimen/movie_grid_padding"
+        android:layout_margin="@dimen/movie_grid_margin"
         />
 
     <TextView
         android:id="@+id/tv_error_message_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:textSize="20sp"
+        android:padding="@dimen/error_message_padding"
+        android:textSize="@dimen/error_message_textSize"
         android:visibility="invisible"
         android:text="There was a prolem when retrieving the movie list. Please check your internet connection and try again."/>
 
     <ProgressBar
         android:id="@+id/pb_loading_indicator"
-        android:layout_height="42dp"
-        android:layout_width="42dp"
+        android:layout_height="@dimen/spinner_height"
+        android:layout_width="@dimen/spinner_width"
         android:layout_gravity="center"
         android:visibility="invisible" />
 
