--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="movie_grid_padding">0dp</dimen>
+    <dimen name="movie_grid_margin">0dp</dimen>
+    <dimen name="error_message_padding">16dp</dimen>
+    <dimen name="error_message_textSize">20sp</dimen>
+    <dimen name="spinner_width">42dp</dimen>
+    <dimen name="spinner_height">42dp</dimen>
 </resources>
